# clubman

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  Rocket.toml  plt.toml  ptl.toml
cli/: Cargo.toml
lib/: Cargo.toml
lib/src/: basic.rs  club.rs  lib.rs
lib/tests/: basic_types.rs
src/: club.rs  main.rs  members.rs
static/: index.html  index.html.css
static/styles/: clubman.css
templates/: index.hbs  login.hbs  signin.hbs
templates/components/: footer.hbs  layout.hbs  nav.hbs
