[package]
name = "clubman"
version = "0.0.1"
authors = ["Jeff Cousino <j.cousino.consulting@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.7", features = ["tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates"]
