[package]
name = "clubman"
version = "0.0.1"
authors = ["Jeff Cousino <j.cousino.consulting@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
rocket = { version = "0.4" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
argon2 = "0.2.0"
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "0.8", features = ["serde", "v4"]}

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates"]
